@@ -18,6 +18,10 @@
   17. SHELL command now (finally) supports diff (thanks google code!).  
   18. Similar to #15, the entire world map, w/ cmare files, is in VFS at /resources/map/... along with editable properties files.
 
+//TODO: make the tech install skill!!!
+//TODO: make components interact badly based on techlevel -- generators/batteries affect things they power, software affects controlled.
+//      this encourages equality in tech level, which will bleed out into the comparative components (weapons, shields)
+//TODO: make blaster shield to go along with reflect and mute field, also make kinetic shield thats only good against mundane weapons.
 //TODO: make enviro control systems
 //TODO: some way to reposition planets? esp relative to nearby ones
 //TODO: create solar systems, esp stars.  planets should be thin areas, solar systems are triggered to load when players fly near enough. 
